fix: dont show scrollbar in sidebar

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -521,6 +521,9 @@ $warning-unicorn : $mat-lime;
     .components-container-xs {
       padding: 0px !important;
     }
+    .table-component-holder {
+      margin-left: 4px;
+    }
   }
   .no-results{
     text-align: center;
